--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- API URL will be injected by build process -->
+    <meta name="api-url" content="" />
     <title>App Review Insights Analyzer</title>
   </head>
   <body>
